# whatsapp_export_viewer

./: README.md  combine_chats.py  index.html  package-lock.json  package.json
public/themes/: dark_theme.css  light_theme.css
src/: App.css  App.tsx  AutoLink.tsx  Chat.tsx  ChatView.tsx  HighlightText.tsx  LoadChats.tsx  Search.tsx  Settings.tsx  StarredChats.tsx  Statistics.tsx  load_chats.tsx  messages.ts  types.ts  utilities.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
