[package]
name = "whatsapp_export_viewer"
version = "0.1.0"
description = "Viewer for exported WhatsApp chats"
authors = ["William Watson"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "whatsapp_export_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = {version = "0.4.41", features = ["serde"] }
tauri-plugin-dialog = "2"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
